Feat/hr improvements (#22)
* "changes made in hr module"

* "changes made in hr module"

* finance: customer, vendor

* feat: budget, journal entry, user image upload, swagger fix

* Feat/finance module (#12)

* fix: cors prod

* feat: journal entry

* feat: budget

* Made changes across hr module

* Made changes across hr module

---------

Co-authored-by: anandureghu <anandukr145@gmail.com>